fix: fix index.html buttons jumping on pressing
Remove border-bottom color and size

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -548,9 +548,13 @@ img.img-third-width {
 
 /* end backtotop button section */
 a.check-out:hover, a.check-out:active,
-    a.resume:hover, a.resume:active {
+    a.resume:hover, a.resume:active,
+    a.check-out:focus, a.resume:focus{
         padding-bottom: 6px;
         outline: none;
+        border-bottom: 2px solid transparent;
+        -webkit-box-shadow: none;
+                box-shadow: none;
     }
 a.check-out {
     padding: 8px 18px;
@@ -1517,9 +1521,13 @@ input[type="tel"] {
         text-align: center;
     }
     a.check-out:hover, a.check-out:active,
-    a.resume:hover, a.resume:active {
+    a.resume:hover, a.resume:active,
+    a.check-out:focus, a.resume:focus{
         padding-bottom: 6px;
         outline: none;
+        border-bottom: 2px solid transparent;
+        -webkit-box-shadow: none;
+                box-shadow: none;
     }
 
     .about-buttons-big-screen {
@@ -1536,9 +1544,13 @@ input[type="tel"] {
         text-align: center;
     }
     a.check-out:hover, a.check-out:active,
-    a.resume:hover, a.resume:active {
+    a.resume:hover, a.resume:active,
+    a.check-out:focus, a.resume:focus{
         padding-bottom: 6px;
         outline: none;
+        border-bottom: 2px solid transparent;
+        -webkit-box-shadow: none;
+                box-shadow: none;
     }
 
     a.check-out {
@@ -1567,9 +1579,13 @@ input[type="tel"] {
         display: none;
     }
     a.check-out:hover, a.check-out:active,
-    a.resume:hover, a.resume:active {
+    a.resume:hover, a.resume:active,
+    a.check-out:focus, a.resume:focus{
         padding-bottom: 6px;
         outline: none;
+        border-bottom: 2px solid transparent;
+        -webkit-box-shadow: none;
+                box-shadow: none;
     }
 
     .about-buttons-big-screen {
@@ -1582,9 +1598,13 @@ input[type="tel"] {
         display: none;
     }
     a.check-out:hover, a.check-out:active,
-    a.resume:hover, a.resume:active {
+    a.resume:hover, a.resume:active,
+    a.check-out:focus, a.resume:focus{
         padding-bottom: 6px;
         outline: none;
+        border-bottom: 2px solid transparent;
+        -webkit-box-shadow: none;
+                box-shadow: none;
     }
 
     .contact-image {
@@ -1685,9 +1705,13 @@ input[type="tel"] {
         min-width: 100%;
     }
     a.check-out:hover, a.check-out:active,
-    a.resume:hover, a.resume:active {
+    a.resume:hover, a.resume:active,
+    a.check-out:focus, a.resume:focus{
         padding-bottom: 6px;
         outline: none;
+        border-bottom: 2px solid transparent;
+        -webkit-box-shadow: none;
+                box-shadow: none;
     }
 
     .about-buttons-small-screen {
@@ -1708,9 +1732,13 @@ input[type="tel"] {
         text-decoration: none;
     }
     a.check-out:hover, a.check-out:active,
-    a.resume:hover, a.resume:active {
+    a.resume:hover, a.resume:active,
+    a.check-out:focus, a.resume:focus{
         padding-bottom: 6px;
         outline: none;
+        border-bottom: 2px solid transparent;
+        -webkit-box-shadow: none;
+                box-shadow: none;
     }
 
     .slider-container {
@@ -1733,9 +1761,13 @@ input[type="tel"] {
         display: none;
     }
     a.check-out:hover, a.check-out:active,
-    a.resume:hover, a.resume:active {
+    a.resume:hover, a.resume:active,
+    a.check-out:focus, a.resume:focus{
         padding-bottom: 6px;
         outline: none;
+        border-bottom: 2px solid transparent;
+        -webkit-box-shadow: none;
+                box-shadow: none;
     }
 
     a.check-out,
@@ -1965,9 +1997,13 @@ input[type="tel"] {
         grid-gap: 10px;
     }
     a.check-out:hover, a.check-out:active,
-    a.resume:hover, a.resume:active {
+    a.resume:hover, a.resume:active,
+    a.check-out:focus, a.resume:focus{
         padding-bottom: 6px;
         outline: none;
+        border-bottom: 2px solid transparent;
+        -webkit-box-shadow: none;
+                box-shadow: none;
     }
 
     .slider-overview-paragraph {
@@ -2011,9 +2047,13 @@ input[type="tel"] {
         display: none;
     }
     a.check-out:hover, a.check-out:active,
-    a.resume:hover, a.resume:active {
+    a.resume:hover, a.resume:active,
+    a.check-out:focus, a.resume:focus{
         padding-bottom: 6px;
         outline: none;
+        border-bottom: 2px solid transparent;
+        -webkit-box-shadow: none;
+                box-shadow: none;
     }
 
     .slider-image {
@@ -2160,9 +2200,13 @@ input[type="tel"] {
         width: 32%;
     }
     a.check-out:hover, a.check-out:active,
-    a.resume:hover, a.resume:active {
+    a.resume:hover, a.resume:active,
+    a.check-out:focus, a.resume:focus{
         padding-bottom: 6px;
         outline: none;
+        border-bottom: 2px solid transparent;
+        -webkit-box-shadow: none;
+                box-shadow: none;
     }
 
     .table-container {
